# job-parser-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/jobgrep/: cli.py
src/pathfinder/: cli.py
